--- a/projects/webapp/index.html
+++ b/projects/webapp/index.html
@@ -9,7 +9,7 @@
 		src="https://sdk.openui5.org/1.105.0/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resourceroots='{
-			"docgenie": "./"
+			"docgenie": " https://iwilliamve.github.io/projects/webapp"
 		}'
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-compatVersion="edge"
