--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut,
                   congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus
                   sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
-                <a href="projects\webapp\index.html" class="ds-button" target="_blank">Details</a>
+                <a href="projects\food\index.html" class="ds-button" target="_blank">Details</a>
               </section>
             </div>
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
